# twink

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
.codex/: config.toml
.github/workflows/: ci.yml
cmake/: TwinkConfig.cmake.in
examples/: basic_transform.cpp
include/twink/: base_tween.hpp  easing.hpp  timeline.hpp  tween.hpp  tween_accessor.hpp  tween_callback.hpp  tween_manager.hpp  twink.hpp
src/: base_tween.cpp  easing.cpp  timeline.cpp  tween.cpp  tween_manager.cpp
tests/: twink_tests.cpp
